# swaCMake

./: .gitignore  CMakeLists.txt  README.md  install.sh  swaCMakeConfig.cmake.in  swaCMakeUninstall.cmake.in
cmake/: swaSetPolicies.cmake  swaSetPolocies.cmake  swaVersionNumbers.cmake
